test/compile-fail/fn__ret_omit.he
fn blah
{
    1            //~ERROR 3017 missed semicolon
    0;
}

fn main
{
    blah()       //~ERROR 3017 missed semicolon
    0;
}
